release: integrate StarsectorPrepatcher 0.9.5